--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ label {
   right: 0;
   z-index: 5;
   max-height: 5.3125rem;
+  background-color: #fff;
 }
 @media (min-width: 47em) {
   .header {
@@ -274,7 +275,7 @@ label {
 .sidebar__body {
   height: 100%;
   width: 100%;
-  background-color: #e1edec;
+  background-color: #17c2b1;
   -webkit-transform: translateX(100%);
       -ms-transform: translateX(100%);
           transform: translateX(100%);
@@ -298,6 +299,7 @@ label {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1.25rem;
+  color: #fff;
 }
 .sidebar__item {
   padding: 0.625rem 0;
@@ -353,6 +355,85 @@ label {
             transform: translateX(100%);
   }
 }
+.footer {
+  background-color: #17c2b1;
+}
+.footer__wrapper {
+  padding: 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 1.875rem;
+}
+@media (min-width: 47em) {
+  .footer__wrapper {
+    padding: 4rem 0;
+    gap: 1.5625rem;
+  }
+}
+@media (min-width: 61em) {
+  .footer__wrapper {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.footer__logo {
+  max-width: 12.5625rem;
+}
+.footer-menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+  color: #fff;
+}
+@media (min-width: 47em) {
+  .footer-menu__list {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 1.25rem;
+  }
+}
+@media (min-width: 61em) {
+  .footer-menu__list {
+    gap: 2rem;
+  }
+}
+.footer-menu__item {
+  padding: 0.375rem 0;
+}
+.footer-menu__link {
+  color: inherit;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .footer-menu__link:hover {
+    color: #262d2d;
+  }
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -392,4 +473,8 @@ body {
   margin: 0 auto;
   max-width: 1230px;
   padding: 0 15px;
+}
+
+main {
+  height: 100vh;
 }
