create hero section payload and component

--- a/src/app/(frontend)/scss/_variables.scss
+++ b/src/app/(frontend)/scss/_variables.scss
@@ -1,5 +1,6 @@
 $colorDarkBlue: #262d2d;
 $colorBlue: #17c2b1;
+$colorLightBlue: #b2ede7;
 $bgBlue: #17c2b1;
 $bgLightBlue: #f2fafa;
 $colorWhite: #fff;
