--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,28 @@ h6 {
 /* FORM */
 input,
 button,
-textarea {
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
   color: inherit;
   background-color: transparent;
+  border-color: transparent;
+  outline: none;
+  all: unset;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 input,
@@ -87,6 +103,12 @@ textarea {
 
 label {
   display: block;
+}
+
+option {
+  font: inherit;
+  background-color: #fff;
+  cursor: pointer;
 }
 
 .header {
@@ -434,6 +456,205 @@ label {
   }
 }
 
+.hero {
+  padding: 1.5rem 0 2.5rem 0;
+  min-height: 100svh;
+  height: auto;
+  overflow: hidden;
+}
+@media (min-width: 65em) {
+  .hero {
+    padding: 3.5rem 0 6.5rem 0;
+  }
+}
+.hero__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2.3125rem;
+}
+@media (min-width: 65em) {
+  .hero__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 0rem;
+  }
+}
+.content-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+}
+@media (min-width: 65em) {
+  .content-block {
+    position: relative;
+    z-index: 2;
+    -ms-flex-preferred-size: 44.375rem;
+        flex-basis: 44.375rem;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    right: -56px;
+    overflow: visible;
+  }
+}
+.content-block__title {
+  font-size: 2.25rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (min-width: 47em) {
+  .content-block__title {
+    font-size: 3.25rem;
+  }
+}
+@media (min-width: 65em) {
+  .content-block__title {
+    font-size: 4.053125rem;
+    max-width: 33.625rem;
+  }
+}
+.content-block__description {
+  margin-bottom: 1rem;
+  font-size: 1.0625rem;
+  line-height: 1.6;
+}
+@media (min-width: 47em) {
+  .content-block__description {
+    font-size: 1.125rem;
+  }
+}
+@media (min-width: 65em) {
+  .content-block__description {
+    max-width: 33.625rem;
+    font-size: 1.328125rem;
+  }
+}
+
+.form-search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  border-radius: 4px;
+  background: #fff;
+  -webkit-box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+  gap: 1rem;
+}
+@media (min-width: 65em) {
+  .form-search {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 0.5rem;
+  }
+}
+.form-search__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+@media (min-width: 47em) {
+  .form-search__row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 0.5rem;
+  }
+}
+.imgs-block {
+  width: 100%;
+  padding: 2.5rem 0 0 0;
+}
+@media (min-width: 47em) {
+  .imgs-block {
+    padding: 6.25rem 0 0 0;
+  }
+}
+.imgs-block__wrapper {
+  position: relative;
+}
+
+.img-block__main {
+  position: relative;
+  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  margin-right: -0.625rem;
+  aspect-ratio: 580/587;
+}
+.img-block__bg {
+  position: absolute;
+  top: -1.875rem;
+  right: -3.75rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 47em) {
+  .img-block__bg {
+    top: -4.375rem;
+    right: -5.625rem;
+  }
+}
+@media (min-width: 57em) {
+  .img-block__bg {
+    top: -4.6875rem;
+  }
+}
+@media (min-width: 67em) {
+  .img-block__bg {
+    top: -2.5rem;
+    right: -5.625rem;
+  }
+}
+
+.select--hero {
+  -ms-flex-preferred-size: 12.625rem;
+      flex-basis: 12.625rem;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -451,24 +672,6 @@ body {
   height: 100%;
 }
 
-.wrapper {
-  min-height: 100%;
-  overflow: visible;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.wrapper > main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
 [class*=__container] {
   margin: 0 auto;
   max-width: 1230px;
@@ -476,5 +679,149 @@ body {
 }
 
 main {
-  height: 100vh;
+  margin-top: 5.3125rem;
+}
+@media (min-width: 47em) {
+  main {
+    margin-top: 6.0625rem;
+  }
+}
+@media (min-width: 65em) {
+  main {
+    margin-top: 6.5rem;
+  }
+}
+
+.input-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 17.5rem;
+      flex-basis: 17.5rem;
+  gap: 0.5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.9375rem 1rem 0.9375rem 1rem;
+  border-radius: 4px;
+  border: 1px solid #889e9d;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1) inset;
+          box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1) inset;
+  width: 100%;
+  max-height: 3.5rem;
+}
+.input-wrapper:focus, .input-wrapper:focus-visible {
+  outline: #17c2b1;
+}
+.input-wrapper:active {
+  border-color: #17c2b1;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .input-wrapper:hover {
+    border-color: #17c2b1;
+  }
+}
+.input-wrapper .input::-webkit-input-placeholder {
+  color: #889e9d;
+}
+.input-wrapper .input::-moz-placeholder {
+  color: #889e9d;
+}
+.input-wrapper .input:-ms-input-placeholder {
+  color: #889e9d;
+}
+.input-wrapper .input::-ms-input-placeholder {
+  color: #889e9d;
+}
+.input-wrapper .input::placeholder {
+  color: #889e9d;
+}
+
+.select {
+  position: relative;
+  width: 100%;
+  cursor: pointer;
+  width: 100%;
+  max-height: 3.5rem;
+}
+.select__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-transition: border-color 0.3s;
+  transition: border-color 0.3s;
+}
+.select .chevron-icon {
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.select.open .chevron-icon {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.select__options {
+  position: absolute;
+  z-index: 5;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #fff;
+  border: 1px solid #17c2b1;
+  border-top: none;
+  overflow-y: auto;
+  max-height: 12.5rem;
+}
+.select__option {
+  padding: 0.9375rem 0.625rem 0.9375rem 0.625rem;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .select__option:hover {
+    background-color: #17c2b1;
+  }
+}
+.select__option.selected {
+  background: #b2ede7;
+}
+
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.625rem 1rem 0.625rem 1rem;
+  border-radius: 4px;
+  border: 1px solid #17c2b1;
+  font-weight: 700;
+  width: 100%;
+  max-height: 3.5rem;
+}
+.button--btn {
+  background-color: #17c2b1;
+  color: #fff;
+  -ms-flex-preferred-size: 9.25rem;
+      flex-basis: 9.25rem;
+  -webkit-transition: border-color 0.3s, opacity 0.3s;
+  transition: border-color 0.3s, opacity 0.3s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .button--btn:hover {
+    border-color: #262d2d;
+    opacity: 0.9;
+  }
 }
