--- a/src/app/(frontend)/scss/_reset.scss
+++ b/src/app/(frontend)/scss/_reset.scss
@@ -52,12 +52,25 @@ h6 {
 /* FORM */
 input,
 button,
-textarea {
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
   color: inherit;
   background-color: transparent;
+  border-color: transparent;
+  outline: none;
+  all: unset;
+  box-sizing: border-box;
+  font: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  appearance: none;
 }
 input,
 textarea {
@@ -68,12 +81,18 @@ select,
 option {
   cursor: pointer;
 }
-input[type="text"],
-input[type="email"],
-input[type="tel"],
+input[type='text'],
+input[type='email'],
+input[type='tel'],
 textarea {
   appearance: none;
 }
 label {
   display: block;
+}
+
+option {
+  font: inherit;
+  background-color: #fff;
+  cursor: pointer;
 }
