--- a/css/style.css
+++ b/css/style.css
@@ -655,6 +655,240 @@ option {
           flex-grow: 1;
 }
 
+.product {
+  -ms-flex-preferred-size: 18.8125rem;
+      flex-basis: 18.8125rem;
+  min-width: 18.8125rem;
+}
+@media (min-width: 47em) {
+  .product {
+    -ms-flex-preferred-size: 24rem;
+        flex-basis: 24rem;
+    min-width: 24rem;
+  }
+}
+@media (min-width: 65em) {
+  .product {
+    -ms-flex-preferred-size: 25.6875rem;
+        flex-basis: 25.6875rem;
+    min-width: 25.6875rem;
+  }
+}
+.product__wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #fff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+}
+.product__link {
+  width: 100%;
+  aspect-ratio: 384/269;
+  min-height: 269px;
+  overflow: hidden;
+  display: block;
+}
+.product__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px 4px 0px 0px;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .product__img:hover {
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+.product__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.25rem;
+  height: 100%;
+  padding: 1rem 1rem 1rem 1rem;
+}
+.product__name {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.2;
+  cursor: pointer;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+@media (min-width: 65em) {
+  .product__name {
+    font-size: 1.0625rem;
+  }
+}
+@media (min-width: 65em) {
+  .product__name {
+    font-size: 1.328rem;
+  }
+}
+@media (any-hover: hover), (pointer: fine) {
+  .product__name:hover {
+    color: #17c2b1;
+  }
+}
+.product__price {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #17c2b1;
+}
+@media (min-width: 47em) {
+  .product__price {
+    font-size: 1.0625rem;
+  }
+}
+.top-offers {
+  padding: 2.5rem 0 3.0625rem 0;
+  background-color: #b2ede7;
+  overflow-x: auto;
+}
+@media (min-width: 47em) {
+  .top-offers {
+    padding: 4rem 0 5.375rem 0;
+  }
+}
+@media (min-width: 65em) {
+  .top-offers {
+    padding: 7.5rem 0 8.0625rem 0;
+  }
+}
+.top-offers__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.8125rem;
+}
+@media (min-width: 47em) {
+  .top-offers__wrapper {
+    gap: 2rem;
+  }
+}
+@media (min-width: 47em) {
+  .top-offers__wrapper {
+    gap: 2.625rem;
+  }
+}
+.top-offers__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+}
+@media (min-width: 65em) {
+  .top-offers__block {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    gap: 1.25rem;
+  }
+}
+.top-offers__title-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+@media (min-width: 47em) {
+  .top-offers__title-block {
+    max-width: 36.75rem;
+  }
+}
+.top-offers__title {
+  font-size: 1.75rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (min-width: 47em) {
+  .top-offers__title {
+    font-size: 2.075rem;
+  }
+}
+@media (min-width: 65em) {
+  .top-offers__title {
+    font-size: 2.594rem;
+  }
+}
+.top-offers__description {
+  font-size: 1rem;
+}
+@media (min-width: 47em) {
+  .top-offers__description {
+    font-size: 1.0625rem;
+  }
+}
+.top-offers__arrow-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.top-offers__products {
+  width: 100%;
+}
+
+.products__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+@media (min-width: 47em) {
+  .products__wrapper {
+    gap: 1.5rem;
+  }
+}
+
+.button--top-offers {
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -800,7 +1034,6 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 0.5rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -824,4 +1057,51 @@ main {
     border-color: #262d2d;
     opacity: 0.9;
   }
+}
+.button--outline {
+  color: #17c2b1;
+  -webkit-transition: border-color 0.3s, color 0.3s;
+  transition: border-color 0.3s, color 0.3s;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .button--outline:hover {
+    background-color: #17c2b1;
+    color: #fff;
+  }
+}
+.button--icon {
+  background-color: #17c2b1;
+  border-radius: 50%;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 3.5rem;
+  padding: 1.125rem 1.125rem 1.125rem 1.125rem;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+.button--icon:disabled {
+  background-color: #e1edec;
+  pointer-events: none;
+  cursor: default;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .button--icon:hover {
+    border-color: #262d2d;
+    opacity: 0.7;
+  }
+}
+
+.embla__arrow-left svg {
+  rotate: 180deg;
 }
