--- a/src/app/(frontend)/scss/style.scss
+++ b/src/app/(frontend)/scss/style.scss
@@ -6,6 +6,7 @@
 @use 'components/_product-card';
 @use 'components/_top-offers';
 @use 'components/_reviews-section';
+@use 'components/_about-us';
 
 html {
   scroll-behavior: smooth;
