--- a/src/app/(frontend)/scss/style.scss
+++ b/src/app/(frontend)/scss/style.scss
@@ -7,6 +7,7 @@
 @use 'components/_top-offers';
 @use 'components/_reviews-section';
 @use 'components/_about-us';
+@use 'components/_subscribe';
 
 html {
   scroll-behavior: smooth;
@@ -56,6 +57,12 @@ main {
 
 // --- ui kit ----- //
 
+.input-block {
+  display: flex;
+  flex-direction: column;
+  gap: toRem(2);
+}
+
 .input-wrapper {
   display: flex;
   flex-basis: toRem(280);
@@ -89,6 +96,12 @@ main {
       color: $colorDarkGrey;
     }
   }
+}
+
+.input-error {
+  font-size: toRem(14);
+  margin-top: toRem(2);
+  color: red;
 }
 
 .input--icon {
