--- a/css/style.css
+++ b/css/style.css
@@ -189,13 +189,15 @@ option {
   .menu__item {
     padding: 0.375rem 0;
   }
-  .menu__item a {
+  .menu__item a,
+  .menu__item button {
     position: relative;
     display: inline-block;
     -webkit-transition: color 0.3s;
     transition: color 0.3s;
   }
-  .menu__item a::after {
+  .menu__item a::after,
+  .menu__item button::after {
     content: "";
     position: absolute;
     left: 50%;
@@ -211,10 +213,12 @@ option {
   }
 }
 @media (min-width: 65em) and (any-hover: hover), (min-width: 65em) and (pointer: fine) {
-  .menu__item a:hover {
+  .menu__item a:hover,
+  .menu__item button:hover {
     color: #17c2b1;
   }
-  .menu__item a:hover::after {
+  .menu__item a:hover::after,
+  .menu__item button:hover::after {
     width: 100%;
   }
 }
@@ -1334,6 +1338,29 @@ option {
   min-width: 17.6875rem;
 }
 
+.contact-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5625rem;
+}
+.contact-form .button {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1380,6 +1407,11 @@ main {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 0.125rem;
+}
+
+.label {
+  line-height: 1.58;
+  margin-bottom: 0.25rem;
 }
 
 .input-wrapper {
@@ -1432,6 +1464,42 @@ main {
   font-size: 0.875rem;
   margin-top: 0.125rem;
   color: red;
+}
+
+.textarea--input {
+  min-height: 14.6875rem;
+  padding: 0.9375rem 1rem 0.9375rem 1rem;
+  border-radius: 4px;
+  border: 1px solid #889e9d;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1) inset;
+          box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1) inset;
+}
+.textarea--input:focus, .textarea--input:focus-visible {
+  outline: #17c2b1;
+}
+.textarea--input:active {
+  border-color: #17c2b1;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .textarea--input:hover {
+    border-color: #17c2b1;
+  }
+}
+.textarea--input .input::-webkit-input-placeholder {
+  color: #889e9d;
+}
+.textarea--input .input::-moz-placeholder {
+  color: #889e9d;
+}
+.textarea--input .input:-ms-input-placeholder {
+  color: #889e9d;
+}
+.textarea--input .input::-ms-input-placeholder {
+  color: #889e9d;
+}
+.textarea--input .input::placeholder {
+  color: #889e9d;
 }
 
 .select {
@@ -1605,4 +1673,75 @@ main {
   .title-block__description {
     font-size: 1.0625rem;
   }
+}
+
+.modal {
+  max-height: 100svh;
+  max-width: 37.5rem;
+  padding: 2.5rem 1.25rem;
+  opacity: 0;
+  -webkit-transform: translateY(-30px);
+      -ms-transform: translateY(-30px);
+          transform: translateY(-30px);
+  -webkit-transition: opacity 300ms ease, -webkit-transform 300ms ease;
+  transition: opacity 300ms ease, -webkit-transform 300ms ease;
+  transition: opacity 300ms ease, transform 300ms ease;
+  transition: opacity 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
+}
+.modal--open {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+.modal--close {
+  opacity: 0;
+  -webkit-transform: translateY(-30px);
+      -ms-transform: translateY(-30px);
+          transform: translateY(-30px);
+}
+.modal__wrapper {
+  position: relative;
+  inset: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.875rem;
+}
+.modal__button {
+  position: absolute;
+  top: -2.1875rem;
+  right: -0.25rem;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+.modal .modal-button {
+  background-color: #fff;
+}
+.modal__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5625rem;
+  overflow-y: auto;
+}
+
+.modal-overlay {
+  opacity: 0;
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+.modal-overlay--open {
+  opacity: 1;
+}
+.modal-overlay--close {
+  opacity: 0;
 }
