--- a/src/app/(frontend)/scss/style.scss
+++ b/src/app/(frontend)/scss/style.scss
@@ -8,6 +8,7 @@
 @use 'components/_reviews-section';
 @use 'components/_about-us';
 @use 'components/_subscribe';
+@use 'components/_contact-us';
 
 html {
   scroll-behavior: smooth;
@@ -63,6 +64,11 @@ main {
   gap: toRem(2);
 }
 
+.label {
+  line-height: 1.58;
+  margin-bottom: toRem(4);
+}
+
 .input-wrapper {
   display: flex;
   flex-basis: toRem(280);
@@ -105,6 +111,36 @@ main {
 }
 
 .input--icon {
+}
+
+.textarea--input {
+  min-height: toRem(235);
+  padding: toRem(15) toRem(16) toRem(15) toRem(16);
+  border-radius: 4px;
+  border: 1px solid $colorDarkGrey;
+  background: $colorWhite;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1) inset;
+
+  &:focus,
+  &:focus-visible {
+    outline: $colorBlue;
+  }
+
+  &:active {
+    border-color: $colorBlue;
+  }
+
+  @media (any-hover: hover), (pointer: fine) {
+    &:hover {
+      border-color: $colorBlue;
+    }
+  }
+
+  .input {
+    &::placeholder {
+      color: $colorDarkGrey;
+    }
+  }
 }
 
 // --- input select --- ///
@@ -277,5 +313,79 @@ main {
     @media (min-width: 47em) {
       font-size: toRem(17);
     }
+  }
+}
+
+//*----- Modal ----------*//
+
+.modal {
+  max-height: 100svh;
+  max-width: toRem(600);
+  padding: toRem(40) toRem(20);
+
+  opacity: 0;
+  transform: translateY(-30px);
+  transition:
+    opacity 300ms ease,
+    transform 300ms ease;
+
+  // .modal--open
+  &--open {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  // .modal--close
+
+  &--close {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  // .modal__wrapper
+
+  &__wrapper {
+    position: relative;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    gap: toRem(30);
+  }
+
+  // .modal__button
+
+  &__button {
+    position: absolute;
+    top: toRem(-35);
+    right: toRem(-4);
+    align-self: flex-end;
+  }
+
+  // .modal-button
+
+  .modal-button {
+    background-color: $colorWhite;
+  }
+
+  // .modal__content
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: toRem(25);
+    overflow-y: auto;
+  }
+}
+
+.modal-overlay {
+  opacity: 0;
+  transition: opacity 300ms ease;
+
+  &--open {
+    opacity: 1;
+  }
+
+  &--close {
+    opacity: 0;
   }
 }
