--- a/css/style.css
+++ b/css/style.css
@@ -671,13 +671,6 @@ option {
     min-width: 24rem;
   }
 }
-@media (min-width: 65em) {
-  .product {
-    -ms-flex-preferred-size: 25.6875rem;
-        flex-basis: 25.6875rem;
-    min-width: 25.6875rem;
-  }
-}
 .product__wrapper {
   height: 100%;
   display: -webkit-box;
@@ -1361,6 +1354,81 @@ option {
           justify-content: center;
 }
 
+.offers {
+  padding: 1.5rem 0 7.5rem 0;
+}
+.offers__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.offers__container .button {
+  -ms-flex-item-align: center;
+      align-self: center;
+  min-width: 9.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.offers__title {
+  font-size: 2.0751875rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 1.5rem;
+}
+.offers__filters {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+}
+.offers__filters .input-block {
+  max-width: 24.25rem;
+}
+.offers__filters .button {
+  min-width: 9.25rem;
+}
+.offers__line {
+  margin: 2rem 0;
+  height: 1px;
+  background-color: #889e9d;
+}
+.offers__sorting {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1.5625rem;
+}
+.offers__counter {
+  font-size: 1.328125rem;
+  line-height: 1.6;
+}
+.products {
+  padding: 1.5rem 0 1.5rem 0;
+}
+.products__wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5rem;
+}
+
+.offers--select {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  min-width: 11.8125rem;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1517,6 +1585,7 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 1.5625rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1560,6 +1629,9 @@ main {
 .select__option.selected {
   background: #f2fafa;
 }
+.select .placeholder {
+  color: #889e9d;
+}
 
 .button {
   display: -webkit-box;
@@ -1568,6 +1640,7 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 0.5rem;
   padding: 0.625rem 1rem 0.625rem 1rem;
   border-radius: 4px;
   border: 1px solid #17c2b1;
@@ -1631,6 +1704,11 @@ main {
     border-color: #262d2d;
     opacity: 0.7;
   }
+}
+.button span {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
 }
 
 .embla__arrow-left svg {
