finish with offers page, add sorting, add adaptive styles

--- a/css/style.css
+++ b/css/style.css
@@ -1327,8 +1327,10 @@ option {
     width: auto;
   }
 }
-.subscribe-form .input-block {
-  min-width: 17.6875rem;
+@media (min-width: 47em) {
+  .subscribe-form .input-block {
+    min-width: 17.6875rem;
+  }
 }
 
 .contact-form {
@@ -1375,16 +1377,43 @@ option {
           justify-content: center;
 }
 .offers__title {
-  font-size: 2.0751875rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1.2;
   margin-bottom: 1.5rem;
+}
+@media (min-width: 47em) {
+  .offers__title {
+    font-size: 1.66rem;
+  }
+}
+@media (min-width: 65em) {
+  .offers__title {
+    font-size: 2.0751875rem;
+  }
 }
 .offers__filters {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 1rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1.875rem;
+}
+@media (min-width: 65em) {
+  .offers__filters {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    gap: 1rem;
+  }
 }
 .offers__filters .input-block {
   max-width: 24.25rem;
@@ -1401,13 +1430,25 @@ option {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   gap: 1.5625rem;
+}
+@media (min-width: 47em) {
+  .offers__sorting {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .offers__counter {
   font-size: 1.328125rem;
@@ -1418,15 +1459,46 @@ option {
 }
 .products__wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 1.5rem;
 }
+@media (min-width: 47em) {
+  .products__wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 65em) {
+  .products__wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.products__wrapper .product {
+  min-width: 100%;
+}
 
-.offers--select {
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-  min-width: 11.8125rem;
+@media (min-width: 65em) {
+  .offers--select {
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    min-width: 12.5rem;
+  }
+}
+
+.btn-offers-reset {
+  width: 100%;
+  min-height: 3.5rem;
+}
+@media (min-width: 65em) {
+  .btn-offers-reset {
+    width: -webkit-fit-content !important;
+    width: -moz-fit-content !important;
+    width: fit-content !important;
+  }
+}
+
+.input-offers {
+  max-width: 100% !important;
 }
 
 html {
@@ -1666,9 +1738,6 @@ main {
   color: #17c2b1;
   -webkit-transition: border-color 0.3s, color 0.3s;
   transition: border-color 0.3s, color 0.3s;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 @media (any-hover: hover), (pointer: fine) {
   .button--outline:hover {
