--- a/src/app/(frontend)/scss/components/_offers.scss
+++ b/src/app/(frontend)/scss/components/_offers.scss
@@ -18,17 +18,33 @@
   // .offers__title
 
   &__title {
-    font-size: toRem(33.203);
+    font-size: toRem(24);
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: toRem(24);
+
+    @media (min-width: 47em) {
+      font-size: toRem(26.56);
+    }
+
+    @media (min-width: 65em) {
+      font-size: toRem(33.203);
+    }
   }
 
   // .offers__filters
 
   &__filters {
     display: flex;
-    gap: toRem(16);
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: toRem(30);
+
+    @media (min-width: 65em) {
+      flex-direction: row;
+      flex-wrap: nowrap;
+      gap: toRem(16);
+    }
 
     .input-block {
       max-width: toRem(388);
@@ -51,9 +67,15 @@
 
   &__sorting {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column-reverse;
+
     gap: toRem(25);
+
+    @media (min-width: 47em) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   // .offers__counter
@@ -75,14 +97,44 @@
 
   &__wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: toRem(24);
+
+    @media (min-width: 47em) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (min-width: 65em) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    .product {
+      min-width: 100%;
+    }
   }
 }
 
 //.offers--select
 
 .offers--select {
-  max-width: fit-content;
-  min-width: toRem(189);
+  @media (min-width: 65em) {
+    max-width: fit-content;
+    min-width: toRem(200);
+  }
+}
+
+//.btn-offers-reset
+
+.btn-offers-reset {
+  width: 100%;
+  min-height: toRem(56);
+
+  @media (min-width: 65em) {
+    width: fit-content !important;
+  }
+}
+
+//.input-offers
+.input-offers {
+  max-width: 100% !important;
 }
