--- a/src/app/(frontend)/scss/components/_subscribe.scss
+++ b/src/app/(frontend)/scss/components/_subscribe.scss
@@ -109,6 +109,8 @@
   }
 
   .input-block {
-    min-width: toRem(283);
+    @media (min-width: 47em) {
+      min-width: toRem(283);
+    }
   }
 }
