--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html,
 body,
 * {
@@ -659,19 +660,19 @@ option {
           flex-grow: 1;
 }
 
-.product {
+.product-card {
   -ms-flex-preferred-size: 18.8125rem;
       flex-basis: 18.8125rem;
   min-width: 18.8125rem;
 }
 @media (min-width: 47em) {
-  .product {
+  .product-card {
     -ms-flex-preferred-size: 24rem;
         flex-basis: 24rem;
     min-width: 24rem;
   }
 }
-.product__wrapper {
+.product-card__wrapper {
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -685,14 +686,14 @@ option {
   -webkit-box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
 }
-.product__link {
+.product-card__link {
   width: 100%;
   aspect-ratio: 384/269;
   min-height: 269px;
   overflow: hidden;
   display: block;
 }
-.product__img {
+.product-card__img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
@@ -704,13 +705,13 @@ option {
   transition: transform 0.3s, -webkit-transform 0.3s;
 }
 @media (any-hover: hover), (pointer: fine) {
-  .product__img:hover {
+  .product-card__img:hover {
     -webkit-transform: scale(1.1);
         -ms-transform: scale(1.1);
             transform: scale(1.1);
   }
 }
-.product__content {
+.product-card__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -722,7 +723,7 @@ option {
   height: 100%;
   padding: 1rem 1rem 1rem 1rem;
 }
-.product__name {
+.product-card__name {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -734,27 +735,27 @@ option {
   transition: color 0.3s;
 }
 @media (min-width: 65em) {
-  .product__name {
+  .product-card__name {
     font-size: 1.0625rem;
   }
 }
 @media (min-width: 65em) {
-  .product__name {
+  .product-card__name {
     font-size: 1.328rem;
   }
 }
 @media (any-hover: hover), (pointer: fine) {
-  .product__name:hover {
+  .product-card__name:hover {
     color: #17c2b1;
   }
 }
-.product__price {
+.product-card__price {
   font-size: 1rem;
   font-weight: 700;
   color: #17c2b1;
 }
 @media (min-width: 47em) {
-  .product__price {
+  .product-card__price {
     font-size: 1.0625rem;
   }
 }
@@ -1501,6 +1502,430 @@ option {
   max-width: 100% !important;
 }
 
+.images-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1rem;
+  overflow: hidden;
+  margin-bottom: 2rem;
+}
+@media (min-width: 75em) {
+  .images-slider {
+    max-width: 48.5rem;
+  }
+}
+.images-slider__main {
+  width: 100%;
+  height: 100%;
+}
+.main-image__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.0625rem;
+}
+.main-image__image-block {
+  overflow: hidden;
+  min-width: 25rem;
+  min-height: 15rem;
+  aspect-ratio: 300/240;
+  border-radius: 4px;
+}
+@media (min-width: 47em) {
+  .main-image__image-block {
+    min-width: 46.25rem;
+    min-height: 22.6875rem;
+    aspect-ratio: 640/363;
+  }
+}
+@media (min-width: 65em) {
+  .main-image__image-block {
+    min-width: 48.5rem;
+    aspect-ratio: 776/363;
+  }
+}
+.main-image__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slider-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.75rem;
+}
+.slider-block__block {
+  overflow: hidden;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 100%;
+}
+.slider-block__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+.slider-block__image-wrapper {
+  overflow: hidden;
+  aspect-ratio: 90/56;
+  max-width: 5.625rem;
+  border-radius: 4px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  border: 2px solid transparent;
+  -webkit-transition: border-color 0.3s;
+  transition: border-color 0.3s;
+}
+@media (min-width: 75em) {
+  .slider-block__image-wrapper {
+    aspect-ratio: 206/86;
+    max-width: 12.875rem;
+  }
+}
+.slider-block__image-wrapper--border {
+  border-color: #17c2b1;
+}
+.slider-block__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product {
+  margin-bottom: 5rem;
+}
+.product__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2.5rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media (min-width: 75em) {
+  .product__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.product__about {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 65%;
+          flex: 0 1 65%;
+}
+.product__title {
+  font-size: 1.75rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 47em) {
+  .product__title {
+    font-size: 2.075rem;
+  }
+}
+@media (min-width: 75em) {
+  .product__title {
+    font-size: 2.594rem;
+  }
+}
+.product__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.product__short-info {
+  margin-bottom: 2rem;
+}
+.product__mortgage {
+  margin-bottom: 2rem;
+}
+.product__content {
+  margin-bottom: 1rem;
+}
+.product__content p {
+  margin-bottom: 1rem;
+}
+.product__content h2 {
+  font-size: 1.328rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
+}
+.product__content li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.25rem;
+}
+.product__content li::before {
+  content: "•";
+  font-size: 1.2em;
+  padding-left: 0.625rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.product__content h3 {
+  font-size: 1.328rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
+}
+.short-info__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.25rem;
+}
+@media (min-width: 47em) {
+  .short-info__items {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.short-info__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+}
+.short-info__icon {
+  aspect-ratio: 1/1;
+}
+.short-info__title {
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (min-width: 47em) {
+  .short-info__title {
+    font-size: 1.328rem;
+  }
+}
+
+.mortgage-form {
+  border-radius: 4px;
+  background: #f2fafa;
+  padding: 1.1875rem 1.5rem 1.1875rem 1.5rem;
+}
+.mortgage-form__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5625rem;
+}
+@media (min-width: 47em) {
+  .mortgage-form__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+.mortgage-form__deteils {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.mortgage-form__price {
+  color: #17c2b1;
+  font-size: 1.328rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.aside__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  gap: 2.5rem;
+}
+
+.form {
+  background-color: #f2fafa;
+  padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+}
+.form__title {
+  font-size: 1.328rem;
+  line-height: 1.2;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+.menadger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.menadger__photo {
+  aspect-ratio: 52/50;
+}
+.menadger__img {
+  border-radius: 50%;
+}
+.menadger__phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.5rem;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .menadger__phone:hover {
+    opacity: 0.7;
+  }
+}
+
+.brief {
+  background-color: #f2fafa;
+  padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+.brief__title {
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+@media (min-width: 47em) {
+  .brief__title {
+    font-size: 1.328rem;
+  }
+}
+.brief__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+.brief__item {
+  font-size: 1rem;
+}
+@media (min-width: 47em) {
+  .brief__item {
+    font-size: 1.0625rem;
+  }
+}
+
+.item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.25rem;
+}
+.item__title {
+  font-weight: 700;
+}
+.btn-product-block {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-width: 12.75rem;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -1717,14 +2142,14 @@ main {
   border-radius: 4px;
   border: 1px solid #17c2b1;
   font-weight: 700;
-  width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   max-height: 3.5rem;
 }
 .button--btn {
   background-color: #17c2b1;
   color: #fff;
-  -ms-flex-preferred-size: 9.25rem;
-      flex-basis: 9.25rem;
   -webkit-transition: border-color 0.3s, opacity 0.3s;
   transition: border-color 0.3s, opacity 0.3s;
 }
@@ -1892,4 +2317,29 @@ main {
 }
 .modal-overlay--close {
   opacity: 0;
+}
+
+.bread-crumbs {
+  padding: 1.5rem 0 1rem 0;
+}
+.bread-crumbs__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: opacity 0.3s;
+      -ms-transform: opacity 0.3s;
+          transform: opacity 0.3s;
+}
+@media (any-hover: hover), (pointer: fine) {
+  .bread-crumbs__link:hover {
+    opacity: 0.7;
+  }
+}
+
+.map {
+  height: 21.25rem;
 }
