--- a/src/app/(frontend)/scss/components/_product-card.scss
+++ b/src/app/(frontend)/scss/components/_product-card.scss
@@ -1,6 +1,6 @@
 @use '../_index' as *;
 
-.product {
+.product-card {
   flex-basis: toRem(301);
   min-width: toRem(301);
 
@@ -9,7 +9,7 @@
     min-width: toRem(384);
   }
 
-  // .product__wrapper
+  // .product-card__wrapper
 
   &__wrapper {
     height: 100%;
@@ -20,7 +20,7 @@
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
   }
 
-  // .product__link
+  // .product-card__link
 
   &__link {
     width: 100%;
@@ -30,7 +30,7 @@
     display: block;
   }
 
-  // .product__img
+  // .product-card__img
 
   &__img {
     object-fit: cover;
@@ -46,7 +46,7 @@
     }
   }
 
-  // .product__content
+  // .product-card__content
 
   &__content {
     display: flex;
@@ -56,7 +56,7 @@
     padding: toRem(16) toRem(16) toRem(16) toRem(16);
   }
 
-  // .product__name
+  // .product-card__name
 
   &__name {
     flex-grow: 1;
@@ -81,7 +81,7 @@
     }
   }
 
-  // .product__price
+  // .product-card__price
 
   &__price {
     font-size: toRem(16);
