finish page product, create related products section

--- a/src/app/(frontend)/scss/style.scss
+++ b/src/app/(frontend)/scss/style.scss
@@ -12,6 +12,7 @@
 @use 'components/_offers';
 @use 'components/_images-slider';
 @use 'components/_product-block';
+@use 'components/_related-products';
 
 html {
   scroll-behavior: smooth;
