--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ option {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 5;
+  z-index: 50;
   max-height: 5.3125rem;
   background-color: #fff;
 }
@@ -664,6 +664,12 @@ option {
   -ms-flex-preferred-size: 18.8125rem;
       flex-basis: 18.8125rem;
   min-width: 18.8125rem;
+  background-color: #fff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 2;
 }
 @media (min-width: 47em) {
   .product-card {
@@ -681,10 +687,6 @@ option {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #fff;
-  border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
 }
 .product-card__link {
   width: 100%;
@@ -699,6 +701,8 @@ option {
   width: 100%;
   height: 100%;
   border-radius: 4px 4px 0px 0px;
+  pointer-events: none;
+  -webkit-user-drag: none;
   -webkit-transition: -webkit-transform 0.3s;
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
@@ -1926,6 +1930,51 @@ option {
   min-width: 12.75rem;
 }
 
+.related-products {
+  margin-bottom: 2.75rem;
+  background-color: #fff;
+}
+@media (min-width: 47em) {
+  .related-products {
+    margin-bottom: 4.4375rem;
+  }
+}
+@media (min-width: 65em) {
+  .related-products {
+    margin-bottom: 6.25rem;
+  }
+}
+.related-products__wrapper {
+  max-width: 75rem;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.related-products__title {
+  font-size: 1.328rem;
+  font-weight: 700;
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 65em) {
+  .related-products__title {
+    margin-bottom: 0;
+  }
+}
+.related-products__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.25rem;
+  padding: 1.5rem 1.25rem 1.25rem;
+}
+@media (min-width: 47em) {
+  .related-products__items {
+    gap: 1.5rem;
+    padding: 1.5rem 1.25rem 1.25rem 1.25rem;
+    margin: 0 1.25rem;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
