--- a/src/app/(frontend)/scss/components/_product-card.scss
+++ b/src/app/(frontend)/scss/components/_product-card.scss
@@ -3,6 +3,11 @@
 .product-card {
   flex-basis: toRem(301);
   min-width: toRem(301);
+  background-color: $colorWhite;
+  border-radius: 4px;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 2;
 
   @media (min-width: 47em) {
     flex-basis: toRem(384);
@@ -15,9 +20,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: $colorWhite;
-    border-radius: 4px;
-    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
   }
 
   // .product-card__link
@@ -37,6 +39,8 @@
     width: 100%;
     height: 100%;
     border-radius: 4px 4px 0px 0px;
+    pointer-events: none;
+    -webkit-user-drag: none;
     transition: transform 0.3s;
 
     @media (any-hover: hover), (pointer: fine) {
