--- a/css/style.css
+++ b/css/style.css
@@ -1855,6 +1855,14 @@ option {
           flex-direction: column-reverse;
   gap: 2.5rem;
 }
+@media (min-width: 65em) {
+  .aside__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 .form {
   background-color: #f2fafa;
@@ -2336,6 +2344,7 @@ main {
   max-height: 100svh;
   max-width: 37.5rem;
   padding: 2.5rem 1.25rem;
+  position: relative;
   opacity: 0;
   -webkit-transform: translateY(-30px);
       -ms-transform: translateY(-30px);
@@ -2358,8 +2367,6 @@ main {
           transform: translateY(-30px);
 }
 .modal__wrapper {
-  position: relative;
-  inset: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2368,16 +2375,7 @@ main {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1.875rem;
-}
-.modal__button {
-  position: absolute;
-  top: -3.125rem;
-  right: -0.3125rem;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-}
-.modal .modal-button {
-  background-color: #fff;
+  height: 100%;
 }
 .modal__content {
   display: -webkit-box;
@@ -2401,6 +2399,30 @@ main {
 }
 .modal-overlay--close {
   opacity: 0;
+}
+
+.modal-close-fixed {
+  position: fixed;
+  top: 3.5%;
+  right: 0.625rem;
+  z-index: 10000000;
+}
+@media (min-width: 47em) {
+  .modal-close-fixed {
+    right: 1.25rem;
+  }
+}
+.modal-close-fixed.button--icon {
+  background-color: transparent;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+@media (min-width: 47em) {
+  .modal-close-fixed.button--icon {
+    background-color: #fff;
+    border-radius: 4px;
+  }
 }
 
 .bread-crumbs {
