--- a/src/app/(frontend)/scss/components/_product-block.scss
+++ b/src/app/(frontend)/scss/components/_product-block.scss
@@ -199,6 +199,10 @@
     display: flex;
     flex-direction: column-reverse;
     gap: toRem(40);
+
+    @media (min-width: 65em) {
+      flex-direction: column;
+    }
   }
 }
 .form {
