--- a/css/style.css
+++ b/css/style.css
@@ -2366,17 +2366,6 @@ main {
       -ms-transform: translateY(-30px);
           transform: translateY(-30px);
 }
-.modal__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 1.875rem;
-  height: 100%;
-}
 .modal__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2386,7 +2375,12 @@ main {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1.5625rem;
-  overflow-y: auto;
+}
+
+.product-modal__wrapper {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .modal-overlay {
